--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,23 +18,43 @@
         <!-- 1) В этом разделе создай 3 дочерних элемента: -->
 
         <!-- a) Заголовок первого уровня со своим ФИО -->
+        <h1>Черняков Александр Николаевич</h1>
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
+        <p>Учусь в IT-Incubator. Работаю преподавателем в Воскресной школе прихода храма Покрова Пресвятой Богородицы, д. Чижевичи и старшим пономарём в этом же храме. Хобби и увлечения: чтение книг, просмотр фильмов, сериалов, видео и аниме, игра на гитаре, любительская фотосъемка, езда на роликах, видеоигры.</p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
+        <img src="https://puppyshow.ru/wa-data/public/shop/img/foto-avstraliyskaya-ovcharka.jpg" alt="Собака">
     </section>
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+        <select>
+            <option>Минск</option>
+            <option selected>Солигорск</option>
+            <option>Копыль</option>
+        </select>
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Любимые книги:</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+            <ul>
+                <li>Дж. К. Роулинг "Гарри Поттер и Принц-полукровка"</li>
+                <li>Артур Конан Дойл "Затерянный мир"</li>
+                <li>Вероника Рот "Дивергент"</li>
+            </ul>
         </div>
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Любимые фильмы:</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+            <ol>
+                <li>"Назад в будущее"</li>
+                <li>"Шаг вперёд: Всё или ничего"</li>
+                <li>"Тор: Рагнарёк"</li>
+            </ol>
         </div>
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
@@ -42,20 +62,59 @@
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал). 
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
+            <label>
+                <input id="html" type="checkbox" name="html" checked>
+                HTML
+            </label>
+            <label>
+                <input id="css" type="checkbox" name="css">
+                CSS
+            </label>
+            <label>
+                <input id="react" type="checkbox" name="react">
+                JavaScript
+            </label>
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+        <input type="text" placeholder="Новый скилл">
         <!-- 6) Создай здесь кнопку “Добавить” -->
+        <button>Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
+        <hr>
         
-        <table data-cy="hw-about-table-pre">
+        <table data-cy="hw-about-table-pre" border="1">
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать все свободное место по горизонтали (ширине). Таблицу можно заполнять любыми данными -->
+            <tr>
+                <th>Аниме</th>
+                <th>Видеоигры</th>
+                <th>Блюда</th>
+            </tr>
+            <tr>
+                <td>Восхождение Героя Щита</td>
+                <td>S.T.A.L.K.E.R. Anomaly</td>
+                <td>Запеченная курица</td>
+            </tr>
+            <tr>
+                <td>Мастера Меча Онлайн</td>
+                <td>The Elder Scrolls V: Skyrim</td>
+                <td>Макароны по-флотски</td>
+            </tr>
+            <tr>
+                <td>С нуля: Пособие по выживанию в альтернативном мире</td>
+                <td>Assassin’s Creed: Одиссея</td>
+                <td>Молочный суп с гречкой</td>
+            </tr>
+            <tr>
+                <td colspan="3">Увлекаюсь любительской фотосъемкой. Фотографирую, в основном, красивые пейзажи, животных и достопримечательности.</td>
+            </tr>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
         <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+        <a href="https://it-incubator.io/">it-incubator</a>
     </footer>
 </body>
 </html>
