--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 <td>Молочный суп с гречкой</td>
             </tr>
             <tr>
-                <td colspan="3">Увлекаюсь любительской фотосъемкой. Фотографирую, в основном, красивые пейзажи, животных и достопримечательности.</td>
+                <td colspan="2">Увлекаюсь любительской фотосъемкой. Фотографирую, в основном, красивые пейзажи, животных и достопримечательности.</td>
+                <td>Плов</td>
             </tr>
         </table>
     </section>
